--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^6.12.2"
   },
   "devDependencies": {
+    "@types/node": "^14.14.33",
     "@types/react": "^17.0.0",
     "typescript": "^4.1.3"
   }
