--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
+    "react-use": "^17.1.1",
     "sass": "^1.32.8"
   },
   "devDependencies": {
