--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "airtable": "^0.10.1",
     "next": "^10.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
     "react-use": "^17.1.1",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "stripe": "^8.138.0"
   },
   "devDependencies": {
+    "@types/airtable": "^0.8.1",
     "@types/node": "^14.14.33",
     "@types/react": "^17.0.0",
     "typescript": "^4.1.3"
