--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-use": "^17.1.1",
     "sass": "^1.32.8",
     "stripe": "^8.138.0"
@@ -22,6 +23,7 @@
     "@types/airtable": "^0.8.1",
     "@types/node": "^14.14.33",
     "@types/react": "^17.0.0",
+    "@types/react-places-autocomplete": "^7.2.6",
     "typescript": "^4.1.3"
   }
 }
