--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.1",
     "airtable": "^0.10.1",
+    "axios": "^0.21.1",
     "next": "^10.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
