--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "react-places-autocomplete": "^7.3.0",
     "react-use": "^17.1.1",
     "sass": "^1.32.8",
-    "stripe": "^8.138.0"
+    "stripe": "^8.138.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/airtable": "^0.8.1",
     "@types/node": "^14.14.33",
     "@types/react": "^17.0.0",
     "@types/react-places-autocomplete": "^7.2.6",
+    "@types/styled-components": "^5.1.9",
     "typescript": "^4.1.3"
   }
 }
