--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^17.0.0",
     "@types/react-places-autocomplete": "^7.2.6",
     "@types/styled-components": "^5.1.9",
+    "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.1.3"
   }
 }
